--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
   color: #000;
 }
 .forms form input[type="submit"] {
+  color: #000;
   background: #05cdff;
   transition: all 0.1s linear;
   margin-top: 8px;
@@ -44,6 +45,7 @@ body {
   margin-top: 30px;
 }
 .all-users {
+  width: 100%;
   margin-top: 30px;
 }
 .one-user {
@@ -57,6 +59,7 @@ body {
 }
 .one-user button {
   width: 100%;
+  color: #000;
   background: #05cdff;
   font-size: 16px;
   transition: all 0.1s linear;
